<resources>
    <string name="app_name">GK Trivia</string>
    <string name="text_question">Question: 5/54</string>
    <string name="button_true">TRUE</string>
    <string name="button_false">FALSE</string>
    <string name="button_next">NEXT</string>
    <string name="button_previous">PREVIOUS</string>
    <string name="place_holder">Pls make sure you have <b>active internet</b> connection, because this application needs internet to work</string>
    <string name="correctanswer">correct answer!</string>
    <string name="incorrect">incorrect answer</string>
    <string name="text_score">score: 0</string>

</resources>